Bug 1632941 - Treat elements with cursor:pointer CSS as event fluffing targets. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D73068